# MiroTrain

./: .gitignore  README.md  pyproject.toml
docs/: installation.md  usage.md
mirotrain/: __init__.py
mirotrain/data/: __init__.py  _messages.py
mirotrain/datasets/: __init__.py  _chat.py  _collate.py  _packed.py
mirotrain/models/: convert_weights.py
mirotrain/models/qwen3/: __init__.py  _checkpointing_utils.py  _component_builders.py  _convert_weights.py  _model_builders.py  _model_builders_yarn.py  _positional_embeddings.py  _tokenizer.py  _tokenizer_auto.py  _validate.py
mirotrain/models/qwen3_moe/: __init__.py  _component_builders.py  _convert_weights.py  _model_builders.py
mirotrain/modules/: __init__.py  attention.py  transformer.py  ulysses.py
mirotrain/modules/loss/: __init__.py  cross_entropy_loss.py  dpo_loss.py
mirotrain/modules/moe/: __init__.py  dropless_layer.py  expert_parallel.py  experts.py  grouped_gemm_util.py  utils.py
mirotrain/monkey/: __init__.py  _errors.py  _state.py  api.py
mirotrain/tools/qwen3_moe/: merge_moe_experts.py  split_moe_experts.py
mirotrain/training/: __init__.py  _distributed.py  _grad_scaler.py  clip_grad.py  lr_schedulers.py
mirotrain/training/checkpointing/: __init__.py  _checkpoint_client.py  _checkpointer.py  _utils.py
recipes/: dpo_trainer.py  sft_trainer.py
recipes/configs/mirothinker_v0_1/dpo/: mirothinker_v0_1_14B_qwen3_40k_bs32.yaml  mirothinker_v0_1_32B_qwen3_40k_bs32.yaml  mirothinker_v0_1_8B_qwen3_40k_bs32.yaml
recipes/configs/mirothinker_v0_1/sft/: mirothinker_v0_1_14B_qwen3_40k_bs128_pack.yaml  mirothinker_v0_1_32B_qwen3_40k_bs128_pack.yaml  mirothinker_v0_1_8B_qwen3_40k_bs128_pack.yaml
recipes/configs/qwen3/: 14B_full_sft.yaml  32B_full_dpo.yaml  32B_full_sft.yaml  8B_full_sft.yaml
recipes/configs/qwen3_miroverse/: 14B_full_dpo.yaml  14B_full_sft.yaml  32B_full_dpo.yaml  32B_full_sft.yaml  8B_full_dpo.yaml  8B_full_sft.yaml
recipes/configs/qwen3_moe/: 235B-A22B_full_simpleqa_hf.yaml  30B_A3B_full_simpleqa_hf.yaml
recipes/configs/qwen3_yarn/: 14B_full_sft.yaml  32B_full_sft.yaml  8B_full_sft.yaml
tests/models/qwen3/: test_tokenizer.py  test_yarn.py
torchtune/: pyproject.toml
torchtune/recipes/: full_finetune_distributed.py
torchtune/recipes/configs/qwen3/: 8B_full.yaml
torchtune/torchtune/models/qwen2/: _component_builders.py
torchtune/torchtune/models/qwen2_5/: _model_builders.py
torchtune/torchtune/modules/: attention.py  transformer.py  ulysess.py
torchtune/torchtune/training/: _distributed.py
